--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -12,9 +12,21 @@
 
 <BorderPane onKeyPressed="#onKeyPressed" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="speedr.gui.controllers.MainWindowController">
     <top>
-        <ToolBar nodeOrientation="RIGHT_TO_LEFT" BorderPane.alignment="CENTER">
-            <items>
-                <Button onAction="#onConfigureButtonClick">
+      <GridPane>
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label alignment="CENTER" styleClass="speedrText" text="Speedr">
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
+            </Label>
+                <Button onAction="#onConfigureButtonClick" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
                     <graphic>
                         <ImageView>
                             <image>
@@ -23,8 +35,11 @@
                         </ImageView>
                     </graphic>
                 </Button>
-            </items>
-        </ToolBar>
+         </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </GridPane>
     </top>
     <center>
         <SplitPane dividerPositions="0.35" BorderPane.alignment="CENTER">
@@ -33,13 +48,25 @@
                     <center>
                         <ListView fx:id="itemList" disable="true" prefWidth="200.0" BorderPane.alignment="CENTER" />
                     </center>
-                    <top>
-                        <Label text="Emails" BorderPane.alignment="CENTER">
-                            <font>
-                                <Font size="15.0" />
-                            </font>
-                        </Label>
-                    </top>
+               <top>
+                  <HBox alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <TextField fx:id="filterText" onAction="#filterTextChanged" HBox.hgrow="ALWAYS" />
+                        <Button mnemonicParsing="false">
+                            <graphic>
+                                <ImageView fitHeight="17.0" fitWidth="17.0">
+                                    <image>
+                                        <Image url="@../icons/glyphicons/glyphicons-28-search.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                        </Button>
+                     </children>
+                     <BorderPane.margin>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                     </BorderPane.margin>
+                  </HBox>
+               </top>
                 </BorderPane>
             <StackPane focusTraversable="true">
                <children>
