--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -42,11 +42,11 @@
       </GridPane>
     </top>
     <center>
-        <SplitPane dividerPositions="0.35" BorderPane.alignment="CENTER">
+        <SplitPane dividerPositions="0.29060665362035226" BorderPane.alignment="CENTER">
             <items>
                 <BorderPane id="left-panel">
                     <center>
-                        <ListView fx:id="itemList" disable="true" prefWidth="200.0" BorderPane.alignment="CENTER" />
+                        <ListView fx:id="itemList" disable="true" prefHeight="681.0" prefWidth="311.0" BorderPane.alignment="CENTER" />
                     </center>
                <top>
                   <HBox alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER">
