added stop and play/pause

--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -62,7 +62,7 @@
                   <HBox alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER">
                      <children>
                         <TextField fx:id="filterText" onAction="#filterTextChanged" HBox.hgrow="ALWAYS" />
-                        <Button mnemonicParsing="false">
+                        <Button alignment="CENTER" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false">
                             <graphic>
                                 <ImageView fitHeight="17.0" fitWidth="17.0">
                                     <image>
@@ -141,6 +141,18 @@
                                           </ImageView>
                                        </graphic>
                                     </Button>
+
+                                    <Button fx:id="stopBtn" maxHeight="30.0" maxWidth="30.0" minHeight="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#handleStreamChangeRequest">
+                                        <graphic>
+                                            <ImageView>
+                                                <image>
+                                                    <Image url="@../icons/glyphicons/glyphicons-176-stop.png" />
+                                                </image>
+                                            </ImageView>
+                                        </graphic>
+                                            </Button>
+
+
                                               <Button fx:id="btnPause" maxHeight="30.0" maxWidth="30.0" minHeight="30.0" minWidth="30.0" mnemonicParsing="false" onAction="#handleStreamChangeRequest" prefHeight="30.0" prefWidth="30.0">
                                                   <graphic>
                                                       <ImageView>
