--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -82,7 +82,7 @@
                   </HBox>
                </top>
                 </BorderPane>
-            <StackPane focusTraversable="true">
+            <StackPane focusTraversable="true" styleClass="theatre-box">
                <children>
                       <BorderPane fx:id="readerPane" focusTraversable="true" visible="false">
                           <center>
