--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -65,15 +65,25 @@
                   <HBox alignment="CENTER" spacing="5.0" BorderPane.alignment="CENTER">
                      <children>
                         <Label text="Filter" />
-                        <TextField fx:id="filterText" onAction="#filterTextChanged" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="filterText" onAction="#filterTextChanged" prefHeight="28.0" prefWidth="214.0" HBox.hgrow="ALWAYS" />
                         <Button alignment="CENTER" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false">
                             <graphic>
                                 <ImageView fitHeight="17.0" fitWidth="17.0">
                                     <image>
                                         <Image url="@../icons/glyphicons/glyphicons-28-search.png" />
                                     </image>
+                                 <effect>
+                                    <ColorAdjust brightness="1.0" />
+                                 </effect>
                                 </ImageView>
                             </graphic>
+                           <styleClass>
+                              <String fx:value="btn" />
+                              <String fx:value="btn-red" />
+                           </styleClass>
+                           <HBox.margin>
+                              <Insets bottom="2.0" />
+                           </HBox.margin>
                         </Button>
                      </children>
                      <BorderPane.margin>
@@ -191,6 +201,10 @@
                                  <VBox.margin>
                                     <Insets />
                                  </VBox.margin>
+                                 <styleClass>
+                                    <String fx:value="btn" />
+                                    <String fx:value="btn-red" />
+                                 </styleClass>
                               </Button>
                            </children>
                         </VBox>
