--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -207,8 +207,8 @@
                                  </styleClass>
                               </Button>
                               <Separator prefHeight="10.0" prefWidth="722.0" visible="false" />
-                              <Label text="Normal" />
-                              <Slider blockIncrement="1.0" majorTickUnit="5.0" max="5.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="24.0" prefWidth="150.0" showTickMarks="true" snapToTicks="true" />
+                              <Label fx:id="wpmLabel" text="Slow" />
+                              <Slider fx:id="wpmSlider" blockIncrement="1.0" majorTickUnit="5.0" max="5.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="24.0" prefWidth="150.0" showTickMarks="true" snapToTicks="true" />
                            </children>
                         </VBox>
                      </children>
