--- a/src/main/resources/fxml/config_window.fxml
+++ b/src/main/resources/fxml/config_window.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.*?>
 <?import java.lang.String?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="speedr.gui.controllers.ConfigWindowController">
+<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="speedr.core.notthings.ConfigWindowController">
     <center>
         <ScrollPane fitToHeight="true" fitToWidth="true" BorderPane.alignment="CENTER">
             <content>
