--- a/src/main/resources/fxml/splash.fxml
+++ b/src/main/resources/fxml/splash.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: de6262;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="speedr.gui.controllers.SplashController">
+<BorderPane prefHeight="768.0" prefWidth="1024.0" style="-fx-background-color: de6262;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="speedr.core.notthings.SplashController">
    <center>
       <VBox maxWidth="-Infinity" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
