set default read speed to 700wpm

--- a/src/main/resources/fxml/main_window.fxml
+++ b/src/main/resources/fxml/main_window.fxml
@@ -207,8 +207,8 @@
                                  </styleClass>
                               </Button>
                               <Separator prefHeight="10.0" prefWidth="722.0" visible="false" />
-                              <Label fx:id="wpmLabel" text="Slow" />
-                              <Slider fx:id="wpmSlider" blockIncrement="5.0" majorTickUnit="1.0" max="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minorTickCount="0" prefHeight="24.0" prefWidth="150.0" showTickMarks="true" snapToTicks="true" />
+                              <Label fx:id="wpmLabel" text="Insane" />
+                              <Slider fx:id="wpmSlider" blockIncrement="5.0" majorTickUnit="1.0" max="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minorTickCount="0" prefHeight="24.0" prefWidth="150.0" showTickMarks="true" snapToTicks="true" value="4.0" />
                            </children>
                         </VBox>
                      </children>
